# FastAPI-projects

./: .dockerignore  .example.env  .gitignore  Dockerfile  Procfile  README.md  commands.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 2a6d211f9d6b_rename_the_count_attribute_in_the_.py  57ef86b72209_add_roles.py  64c6be01f0e0_added_documents_table.py  9222ee124d18_fix_bag_in_document_table.py  a38e975e9974_.py  a46d0d5b6205_f.py  b914c7e8fb92_update_document.py  ba1a4c539c99_added_a_default_value_for_the_documents_.py  caa1b0698d0e_added_sms_table.py  d3b14d10ffe4_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  documents.py  sms.py  users.py
src/routes/: auth.py  contacts.py  documents.py  sms.py  users.py
src/seed/: contacts_to_db.py
src/services/: auth.py  export.py  roles.py  send_sms.py
src/services/documents/: pdf_utils.py
src/services/email/: mail.py
src/services/email/templates/: email_template_contact_form.html
static/js/: message.js
templates/: index.html
tests/: test_route_auth.py  test_routes_contacts.py  test_routes_documents.py  test_routes_users.py  test_unit_repository_documents.py
